[package]
name = "synapse-test-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
synapse-core = { version = "0.1.0", path = "../synapse-core" }
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
synapse-a11y = { version = "0.1.0", path = "../synapse-a11y" }

[lints]
workspace = true
