[package]
name = "pico-hid"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
cortex-m-rt = "0.7.5"
embassy-executor = { version = "0.10.0", features = ["executor-thread", "platform-cortex-m"] }
embassy-rp = { version = "0.10.0", features = ["critical-section-impl", "rp2040", "time-driver"] }
embassy-time = "0.5.1"
embassy-usb = { version = "0.6.0", default-features = false }
panic-halt = "1.0.0"
portable-atomic = { version = "1.13.1", features = ["critical-section"] }
static_cell = "2.1.1"

defmt = { version = "1.0.1", optional = true }
defmt-rtt = { version = "1.0.0", optional = true }
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }

[features]
default = []
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "dep:panic-probe",
    "embassy-executor/defmt",
    "embassy-rp/defmt",
    "embassy-time/defmt",
    "embassy-usb/defmt",
]

[profile.release]
codegen-units = 1
debug = true
lto = "fat"
opt-level = "z"
panic = "abort"

[workspace]
