[package]
name = "pico-hid"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "pico-hid"
path = "src/main.rs"
required-features = ["firmware-bin"]

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
cortex-m-rt = { version = "0.7.5", optional = true }
embassy-executor = { version = "0.10.0", features = ["executor-thread", "platform-cortex-m"], optional = true }
embassy-rp = { version = "0.10.0", features = ["critical-section-impl", "rp2040", "time-driver"], optional = true }
embassy-time = { version = "0.5.1", optional = true }
embassy-usb = { version = "0.6.0", default-features = false, optional = true }
panic-halt = { version = "1.0.0", optional = true }
portable-atomic = { version = "1.13.1", features = ["critical-section"], optional = true }
static_cell = { version = "2.1.1", optional = true }

defmt = { version = "1.0.1", optional = true }
defmt-rtt = { version = "1.0.0", optional = true }
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }

[features]
default = ["firmware-bin"]
firmware-bin = [
    "dep:cortex-m-rt",
    "dep:embassy-executor",
    "dep:embassy-rp",
    "dep:embassy-time",
    "dep:embassy-usb",
    "dep:panic-halt",
    "dep:portable-atomic",
    "dep:static_cell",
]
loopback = []
defmt = [
    "firmware-bin",
    "dep:defmt",
    "dep:defmt-rtt",
    "dep:panic-probe",
    "embassy-executor/defmt",
    "embassy-rp/defmt",
    "embassy-time/defmt",
    "embassy-usb/defmt",
]

[profile.release]
codegen-units = 1
debug = true
lto = "fat"
opt-level = "z"
panic = "abort"

[workspace]
