[package]
autotests = false
name = "calyx-anneal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
calyx-assay = { path = "../calyx-assay" }
calyx-aster = { path = "../calyx-aster" }
calyx-core = { path = "../calyx-core" }
calyx-forge = { path = "../calyx-forge" }
calyx-ledger = { path = "../calyx-ledger" }
calyx-registry = { path = "../calyx-registry" }
blake3.workspace = true
ciborium.workspace = true
rand.workspace = true
rand_chacha.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true
zstd.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[dev-dependencies]
calyx-fsv = { path = "../calyx-fsv" }
calyx-testkit = { path = "../calyx-testkit" }
filetime.workspace = true
proptest.workspace = true

# BEGIN generated integration harnesses (issue #1546)

[[test]]
name = "__calyx_integration_isolated_issue1369_online_head_contract_fsv"
path = "tests/__calyx_integration_isolated_issue1369_online_head_contract_fsv.rs"

[[test]]
name = "__calyx_integration_suite_0"
path = "tests/__calyx_integration_suite_0.rs"

[[test]]
name = "__calyx_integration_suite_1"
path = "tests/__calyx_integration_suite_1.rs"

# END generated integration harnesses (issue #1546)
