[package]
autotests = false
name = "calyx-assay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[features]
default = []
cuda = ["dep:calyx-forge", "calyx-forge/cuda"]

[dependencies]
blake3.workspace = true
calyx-aster = { path = "../calyx-aster" }
calyx-core = { path = "../calyx-core" }
calyx-forge = { path = "../calyx-forge", optional = true }
calyx-loom = { path = "../calyx-loom" }
rand.workspace = true
rand_chacha.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
calyx-anneal = { path = "../calyx-anneal" }
calyx-fsv = { path = "../calyx-fsv" }
calyx-ledger = { path = "../calyx-ledger" }
calyx-lodestar = { path = "../calyx-lodestar" }
calyx-mincut = { path = "../calyx-mincut" }
calyx-oracle = { path = "../calyx-oracle" }
calyx-paths = { path = "../calyx-paths" }
calyx-sextant = { path = "../calyx-sextant" }
calyx-testkit = { path = "../calyx-testkit" }
calyx-ward = { path = "../calyx-ward" }
proptest.workspace = true

# BEGIN generated integration harnesses (issue #1546)

[[test]]
name = "__calyx_integration_isolated_drift_mmd_fsv"
path = "tests/__calyx_integration_isolated_drift_mmd_fsv.rs"

[[test]]
name = "__calyx_integration_isolated_periodicity_fsv"
path = "tests/__calyx_integration_isolated_periodicity_fsv.rs"

[[test]]
name = "__calyx_integration_isolated_stage5_fsv"
path = "tests/__calyx_integration_isolated_stage5_fsv.rs"

[[test]]
name = "__calyx_integration_suite_0"
path = "tests/__calyx_integration_suite_0.rs"

[[test]]
name = "__calyx_integration_suite_1"
path = "tests/__calyx_integration_suite_1.rs"

# END generated integration harnesses (issue #1546)

# Dedicated post-#1546 harnesses. The issue1505-1507 roots mutate the shared
# strict-CUDA environment switch and must remain process-isolated.
[[test]]
name = "__calyx_integration_suite_issue1502_1504_cuda"
path = "tests/__calyx_integration_suite_issue1502_1504_cuda.rs"

[[test]]
name = "__calyx_integration_isolated_issue1505_cka_cuda"
path = "tests/__calyx_integration_isolated_issue1505_cka_cuda.rs"

[[test]]
name = "__calyx_integration_isolated_issue1505_logistic_cuda"
path = "tests/__calyx_integration_isolated_issue1505_logistic_cuda.rs"

[[test]]
name = "__calyx_integration_isolated_issue1506_linalg_cuda"
path = "tests/__calyx_integration_isolated_issue1506_linalg_cuda.rs"

[[test]]
name = "__calyx_integration_isolated_issue1507_periodicity_hawkes_cuda"
path = "tests/__calyx_integration_isolated_issue1507_periodicity_hawkes_cuda.rs"
