[package]
autotests = false
name = "calyx-assay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[features]
default = []
cuda = ["dep:calyx-forge", "calyx-forge/cuda"]

[dependencies]
blake3.workspace = true
calyx-aster = { path = "../calyx-aster" }
calyx-core = { path = "../calyx-core" }
calyx-forge = { path = "../calyx-forge", optional = true }
calyx-loom = { path = "../calyx-loom" }
rand.workspace = true
rand_chacha.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true

# Dedicated post-#1546 harnesses. The issue1505-1507 roots mutate the shared
# strict-CUDA environment switch and must remain process-isolated.
