[package]
autotests = false
name = "calyx-aster"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
aes-gcm.workspace = true
bincode.workspace = true
blake3.workspace = true
calyx-core = { path = "../calyx-core" }
calyx-forge = { path = "../calyx-forge" }
calyx-ledger = { path = "../calyx-ledger" }
calyx-paths = { path = "../calyx-paths" }
crc32fast.workspace = true
hkdf.workspace = true
memmap2.workspace = true
rand.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true
tracing.workspace = true
ulid.workspace = true
zeroize.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }

# BEGIN generated integration harnesses (issue #1546)

[lints]
workspace = true
