[package]
autotests = false
name = "calyx-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
blake3.workspace = true
rand.workspace = true
rand_chacha.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
ulid.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true

# BEGIN generated integration harnesses (issue #1546)

[[test]]
name = "__calyx_integration_suite_0"
path = "tests/__calyx_integration_suite_0.rs"

# END generated integration harnesses (issue #1546)
