[package]
autotests = false
name = "calyx-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
blake3.workspace = true
rand.workspace = true
rand_chacha.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
ulid.workspace = true

[lints]
workspace = true
