[package]
autotests = false
name = "calyx-forge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[features]
default = []
cuda = ["dep:cudarc"]

[dependencies]
calyx-core = { path = "../calyx-core" }
calyx-ledger = { path = "../calyx-ledger" }
cudarc = { workspace = true, optional = true, features = ["std", "driver", "cublas", "nvrtc", "dynamic-linking", "cuda-13030"] }
nvml-wrapper.workspace = true
rand.workspace = true
rand_chacha.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tracing.workspace = true
wide.workspace = true

[dev-dependencies]
calyx-fsv = { path = "../calyx-fsv" }
calyx-testkit = { path = "../calyx-testkit" }
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "bench_admission_overhead"
harness = false

# BEGIN generated integration harnesses (issue #1546)

[[test]]
name = "__calyx_integration_isolated_turboquant_alloc_tests"
path = "tests/__calyx_integration_isolated_turboquant_alloc_tests.rs"

[[test]]
name = "__calyx_integration_platform_0"
path = "tests/__calyx_integration_platform_0.rs"

[[test]]
name = "__calyx_integration_process_0"
path = "tests/__calyx_integration_process_0.rs"

[[test]]
name = "__calyx_integration_suite_0"
path = "tests/__calyx_integration_suite_0.rs"

# END generated integration harnesses (issue #1546)
