[package]
autotests = false
name = "calyx-forge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[features]
default = []
cuda = ["dep:cudarc"]

[dependencies]
calyx-core = { path = "../calyx-core" }
calyx-ledger = { path = "../calyx-ledger" }
cudarc = { workspace = true, optional = true, features = ["std", "driver", "cublas", "nvrtc", "dynamic-linking", "cuda-13030"] }
nvml-wrapper.workspace = true
rand.workspace = true
rand_chacha.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tracing.workspace = true
wide.workspace = true

[lints]
workspace = true
