[package]
autotests = false
name = "calyx-ledger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
bincode.workspace = true
blake3.workspace = true
calyx-core = { path = "../calyx-core" }
ed25519-dalek.workspace = true
serde.workspace = true
serde_json.workspace = true
ulid.workspace = true

[dev-dependencies]
calyx-fsv = { path = "../calyx-fsv" }
calyx-testkit = { path = "../calyx-testkit" }
proptest.workspace = true

# BEGIN generated integration harnesses (issue #1546)

[[test]]
name = "__calyx_integration_suite_0"
path = "tests/__calyx_integration_suite_0.rs"

# END generated integration harnesses (issue #1546)
