[package]
autotests = false
name = "calyx-ledger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
bincode.workspace = true
blake3.workspace = true
calyx-core = { path = "../calyx-core" }
ed25519-dalek.workspace = true
serde.workspace = true
serde_json.workspace = true
ulid.workspace = true

[lints]
workspace = true
