[package]
autotests = false
name = "calyx-lodestar"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[features]
fsv = []

[dependencies]
blake3.workspace = true
calyx-aster = { path = "../calyx-aster" }
calyx-core = { path = "../calyx-core" }
calyx-ledger = { path = "../calyx-ledger" }
calyx-loom = { path = "../calyx-loom" }
calyx-mincut = { path = "../calyx-mincut" }
calyx-paths = { path = "../calyx-paths" }
calyx-sextant = { path = "../calyx-sextant" }
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
calyx-forge = { path = "../calyx-forge" }
calyx-fsv = { path = "../calyx-fsv" }
calyx-testkit = { path = "../calyx-testkit" }
calyx-ward = { path = "../calyx-ward" }
proptest.workspace = true
serde_json.workspace = true

# BEGIN generated integration harnesses (issue #1546)

[[test]]
name = "__calyx_integration_platform_0"
path = "tests/__calyx_integration_platform_0.rs"

[[test]]
name = "__calyx_integration_suite_0"
path = "tests/__calyx_integration_suite_0.rs"

[[test]]
name = "__calyx_integration_suite_1"
path = "tests/__calyx_integration_suite_1.rs"

# END generated integration harnesses (issue #1546)
