[package]
autotests = false
name = "calyx-loom"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[features]
default = []
cuda = ["dep:calyx-forge", "calyx-forge/cuda"]

[dependencies]
blake3.workspace = true
calyx-aster = { path = "../calyx-aster" }
calyx-core = { path = "../calyx-core" }
calyx-forge = { path = "../calyx-forge", optional = true }
calyx-ledger = { path = "../calyx-ledger" }
calyx-ward = { path = "../calyx-ward" }
serde.workspace = true
serde_json.workspace = true
uuid = { workspace = true, features = ["v7"] }

[dev-dependencies]
calyx-forge = { path = "../calyx-forge" }
calyx-fsv = { path = "../calyx-fsv" }
calyx-testkit = { path = "../calyx-testkit" }
proptest.workspace = true

# BEGIN generated integration harnesses (issue #1546)

[[test]]
name = "__calyx_integration_isolated_issue572_reactive_fsv"
path = "tests/__calyx_integration_isolated_issue572_reactive_fsv.rs"

[[test]]
name = "__calyx_integration_suite_0"
path = "tests/__calyx_integration_suite_0.rs"

# END generated integration harnesses (issue #1546)
