[package]
autotests = false
name = "calyx-loom"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[features]
default = []
cuda = ["dep:calyx-forge", "calyx-forge/cuda"]

[dependencies]
blake3.workspace = true
calyx-aster = { path = "../calyx-aster" }
calyx-core = { path = "../calyx-core" }
calyx-forge = { path = "../calyx-forge", optional = true }
calyx-ledger = { path = "../calyx-ledger" }
calyx-ward = { path = "../calyx-ward" }
serde.workspace = true
serde_json.workspace = true
uuid = { workspace = true, features = ["v7"] }

[lints]
workspace = true
