[package]
autotests = false
name = "calyx-oracle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
calyx-assay = { path = "../calyx-assay" }
calyx-anneal = { path = "../calyx-anneal" }
calyx-aster = { path = "../calyx-aster" }
calyx-core = { path = "../calyx-core" }
calyx-forge = { path = "../calyx-forge" }
calyx-ledger = { path = "../calyx-ledger" }
calyx-lodestar = { path = "../calyx-lodestar" }
calyx-paths = { path = "../calyx-paths" }
calyx-ward = { path = "../calyx-ward" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
blake3.workspace = true
calyx-fsv = { path = "../calyx-fsv" }
calyx-loom = { path = "../calyx-loom" }
calyx-testkit = { path = "../calyx-testkit" }
proptest.workspace = true

# BEGIN generated integration harnesses (issue #1546)

[[test]]
name = "__calyx_integration_suite_0"
path = "tests/__calyx_integration_suite_0.rs"

# END generated integration harnesses (issue #1546)
